--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         // Event listener untuk tombol "Iya"
         yesButton.addEventListener('click', function() {
-            window.location.href = '/IfYes/index.html';
+            window.location.href = 'IfYes/index.html'
             // Kamu bisa ganti alert ini dengan redirect ke halaman lain, misalnya: window.location.href = 'halaman-lain.html';
         });
     </script>
